--- a/data/settings.json
+++ b/data/settings.json
@@ -1,1 +1,1 @@
-{"token":"do wpisania","client":"do wpisania","tag":"!","case":"true","separator":"\\s+"}
+{"token":"NjkzODM5NzYzMzcwOTM0Mjkz.XoOU0A.8o4gC92SnnHXLbeZwiOlbZ4jLIs","client":"693839763370934293","tag":"!","case":"true","separator":"\\s+"}
